<resources>
    <string name="google_geo_api_key">AIzaSyDnrHxhQ8T39Wy-l63kWgtreAiG1EjKanM</string>
    <string name="preference_file_key">com.example.lizi.place_search.favorites_preference_file</string>
    <string name="app_name">Places Search</string>
    <string name="main_tab_text_1">Search</string>
    <string name="main_tab_text_2">Favorites</string>
    <string name="keywordInputLabel">Keyword</string>
    <string name="prompt_keyword">Enter keyword</string>
    <string name="categoryInputLabel">Category</string>
    <string name="distanceInputLabel">Distance (in miles)</string>
    <string name="prompt_distance">Enter distance (default 10 miles)</string>
    <string name="locationInputLabel">From</string>
    <string name="radio_currLoc">Current Location</string>
    <string name="radio_other">Other. Specify Location</string>
    <string name="prompt_address">Type in the Location</string>
    <string name="button_search">SEARCH</string>
    <string name="button_clear">CLEAR</string>

    <string name="resultActivityLabel">Search results</string>

    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>

    <string-array name="travel_mode_array">
        <item>Driving</item>
        <item>Bicycling</item>
        <item>Transit</item>
        <item>Walking</item>
    </string-array>
</resources>
